ibft2/ingress/ingress-rules-besu-private.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: network-nginx
  namespace: besu
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-besu-access
  namespace: besu
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: network-nginx
  rules:
  - http:
      paths:
      - path: /rpc
        pathType: Prefix
        backend:
          service:
            name: besu-member1
            port:
              name: json-rpc
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: besu-validator1
            port:
              name: graphql
      - path: /validator1
        pathType: Prefix
        backend:
          service:
            name: besu-validator1
            port:
              name: json-rpc
      - path: /validator2
        pathType: Prefix
        backend:
          service:
            name: besu-validator2
            port:
              name: json-rpc
      - path: /validator3
        pathType: Prefix
        backend:
          service:
            name: besu-validator3
            port:
              name: json-rpc
      - path: /validator4
        pathType: Prefix
        backend:
          service:
            name: besu-validator4
            port:
              name: json-rpc
      - path: /member1
        pathType: Prefix
        backend:
          service:
            name: besu-member1
            port:
              name: json-rpc
      - path: /member1private
        pathType: Prefix
        backend:
          service:
            name: besu-member1
            port:
              name: tessera-tp
      - path: /member2
        pathType: Prefix
        backend:
          service:
            name: besu-member2
            port:
              name: json-rpc
      - path: /member2private
        pathType: Prefix
        backend:
          service:
            name: besu-member2
            port:
              name: tessera-tp
      - path: /member3
        pathType: Prefix
        backend:
          service:
            name: besu-member3
            port:
              name: json-rpc
      - path: /member3private
        pathType: Prefix
        backend:
          service:
            name: besu-member3
            port:
              name: tessera-tp
      - path: /member4
        pathType: Prefix
        backend:
          service:
            name: besu-member4
            port:
              name: json-rpc
      - path: /member4private
        pathType: Prefix
        backend:
          service:
            name: besu-member4
            port:
              name: tessera-tp
